# flumotion-dvb

./: .gitignore  ChangeLog  Makefile.am  RELEASE  TODO  autogen.sh  configure.ac  env  flumotion-dvb.spec.in
conf/: dvb-t-two-channels-ogg.xml  dvb-t-two-channels.xml  dvb-t.xml
flumotion/component/: Makefile.am
flumotion/component/dvb/: Makefile.am  admin_gtk.py  dvb-antenna.glade  dvb-probe-channels.glade  dvb-select-channel.glade  dvb-video-config.glade  dvb.glade  dvb.py  dvb.xml  dvbbin.py  dvbchecks.py  sample.xml  wizard_gtk.py
flumotion/component/producers/dvb/: Makefile.am  admin_gtk.py  dvb.glade  dvb.py  dvb.xml  wizard.glade  wizard_gtk.py
flumotion/component/sample/: admin_gtk.py  common.py  sample.glade  sample.py
flumotion/project/: Makefile.am
flumotion/test/: Makefile.am  common.py  test_sample_admin_gtk.py
flumotion/worker/checks/: Makefile.am  dvb.py  dvb.xml
misc/: setup.py.in
pkg/ubuntu-lucid/: changelog
pkg/ubuntu-oneiric/: changelog  control
po/: LINGUAS  POTFILES.in  es.po  fr.po  nl.po
